[tool.poetry]
name = "solathon"
version = "0.0.2"
description = "High performance, easy to use and feature-rich Solana SDK for Python."
license = "MIT"
authors = ["GitBolt"]
readme = "README.md"
repository = "https://github.com/GitBolt/solathon"
keywords = ["solana", "web3"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]


[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.21.2"
PyNaCl = "^1.4.0"
base58 = "^2.1.1"
construct = "^2.10.67"


[tool.poetry.dev-dependencies]
jedi = "^0.18.1"
neovim = "^0.3.1"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
